--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       </div>
 
       <div>
-        <button onclick='diceGame();'>Jogar dado!</button>
+        <button onclick='jogarDados();'>Jogar dado!</button>
       </div>
 
     </div>
